test/fail/error_recursive_type_parameter.sest
module ErrorRecursiveTypeParameter = struct

  let f(x) = { x | foo = x }

end
